# QT-bug-report

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tst_tests.cpp
Tests/: tst_tests.cpp
